# apdl

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_BRANCH_OSS_AUDIT.md  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  release-manifest.json
pipeline/etl/: pyproject.toml
pipeline/etl/clickhouse/: README.md  decisions_v2.sql  events_v2.sql  feeds_v2.sql
pipeline/etl/docs/: etl-framework.md
pipeline/etl/etl/: __init__.py  base.py  context.py  enrichment.py  envelope.py  loader.py  pipeline.py  registry.py
pipeline/etl/etl/transforms/: __init__.py  decisions.py  events.py  feeds.py
pipeline/etl/scripts/: new_transform.py
pipeline/etl/templates/: transform.py.jinja
pipeline/etl/tests/: conftest.py  test_base.py  test_enrichment.py  test_generator.py  test_pipeline.py  test_registry.py  test_transforms.py
sdk/python/: README.md  pyproject.toml
sdk/python/apdl/: __init__.py  _version.py  client.py  config.py  queue.py  transport.py  types.py
sdk/python/apdl/flags/: __init__.py  cache.py  evaluator.py  hash.py  models.py  (+3 more)
sdk/python/tests/: conftest.py  test_client.py  test_evaluator.py  test_hash.py  test_json_contract.py  test_lifecycle.py  test_models_and_parse.py  test_package_metadata.py  test_parity.py  test_queue.py  test_targeting_contract.py  test_transport.py  test_variant_weight_contract.py
services/agents/: Dockerfile  README.md  pyproject.toml
services/agents/app/: auth.py  main.py  readiness.py  schema.py  service_auth.py
services/agents/docs/: agent-framework.md
services/agents/scripts/: new_agent.py  provision_llm_policy.py
services/agents/templates/: agent.py.jinja  prompts.py.jinja
services/agents/tests/: conftest.py  test_approve_kick.py  test_audit_required.py  test_auth.py  test_behavior_analysis_agent.py  test_capability_readiness.py  test_code_actions.py  test_code_implementation_agent.py  test_code_tool.py  test_container_reproducibility.py  test_custom_agent_framework.py  test_custom_agent_store.py  test_custom_agent_supervisor.py  test_custom_agent_test_endpoint.py  test_custom_agent_test_store.py  test_custom_agents_router.py  test_embeddings.py  test_execution_capabilities.py  test_execution_lane_postgres.py  test_experiment_design_agent.py  test_experiment_design_multi.py  test_experiment_design_safety.py  test_experiment_design_sanitize.py  test_experiment_design_schema.py  test_experiment_evaluation.py  test_experiments_tool.py  test_feature_proposal_grounding.py  test_feature_proposal_verdicts.py  test_flags_tool.py  test_framework.py  test_health.py  test_llm_governance.py  test_llm_governance_migration.py  test_llm_policy_bootstrap.py  test_llm_router_tools.py  test_memory_schema.py  test_mutation_quotas.py  test_postgres_migration_runner.py  test_postgres_migrations.py  test_proposals.py  (+13 more)
services/codegen/: Dockerfile  Dockerfile.worker  README.md  dependency-audit-suppressions.json  pyproject.toml  requirements-agent.constraints.txt  requirements-agent.overrides.txt
services/codegen/app/: auth.py  capabilities.py  config.py  db.py  egress.py  main.py  publication.py
services/codegen/sandbox/: run_changeset.py
services/codegen/scripts/: audit_worker_dependencies.py  audit_worker_dependencies.sh  verify_aider_distribution.py
services/codegen/tests/: conftest.py  fakes.py  preparation_fakes.py  publication_fakes.py  publisher_fakes.py  test_aider_editor.py  test_aider_launcher.py  test_app_auth.py  test_auth.py  test_branch_publisher.py  test_brief.py  test_changed_paths.py  test_changeset_capability.py  test_changesets_endpoints.py  test_checks.py  test_ci_poller.py  test_ci_repair.py  test_ci_sync.py  test_compose_rollout.py  test_config.py  test_connections_endpoints.py  test_container_editor.py  test_container_reproducibility.py  test_contract_cache_selection.py  test_contract_inspectors.py  test_contract_installer.py  test_contract_models.py  test_contract_resolver.py  test_controller_dockerfile.py  test_dependency_slice.py  test_development_publication.py  test_editor_environment.py  test_egress.py  test_evaluation_candidate.py  test_evaluations.py  test_gates.py  test_github_actions_runtime.py  test_github_artifacts.py  test_github_client.py  test_github_observations.py  (+40 more)
services/config/: Dockerfile  README.md  pyproject.toml
services/config/app/: auth.py  client_ip.py  main.py  outbox.py  schema.py  utils.py
services/config/tests/: conftest.py  test_admin.py  test_atomic_migration.py  test_auth.py  test_broadcaster.py  test_client_ip.py  test_evaluate.py  test_evaluator.py  test_event_received_at_migration.py  test_experiment_analysis.py  test_experiment_archive_migration.py  test_experiment_bucket_migration.py  test_experiment_enrollment_contract_migration.py  test_experiment_enrollment_migration.py  test_experiment_flag.py  test_expiry.py  test_flags.py  test_guardrail_disable_migration.py  test_health.py  test_lifecycle.py  test_main_singleton.py  test_mutations.py  test_outbox.py  test_outbox_quarantine_migration.py  test_outbox_retention_migration.py  test_postgres.py  test_project_version_migration.py  test_redis_cache.py  test_rollout_migration.py  test_schema.py  test_statistical_plan.py  test_statistical_plan_migration.py  test_stream.py  test_targeting_contract.py  test_targeting_schema.py  test_utils.py  test_variant_weight_contract.py  test_variant_weight_migration.py
services/query/: Dockerfile  README.md  pyproject.toml
services/query/app/: auth.py  completeness.py  config_client.py  main.py  readiness.py
services/query/tests/: conftest.py  test_analytics_data_deletion.py  test_boundary_marker_retry_migration.py  test_breakdown_query.py  test_breakdown_response.py  test_budgets.py  test_clickhouse_migration_runner.py  test_clickhouse_migrations.py  test_client.py  test_completeness.py  test_completeness_migration.py  test_config_client.py  test_endpoints.py  test_project_id_contract.py  test_queries.py  test_readiness.py  test_retention_and_catalog.py  test_selector_clickhouse.py  test_statistics.py
(+762 files in other folders)
