[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apdl-sdk"
version = "0.1.0"
description = "Server-side Python client SDK for the Autonomous Product Development Loop platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "APDL" }]
keywords = ["analytics", "feature-flags", "experimentation", "ab-testing", "apdl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/JahaanRawat/apdl"
Repository = "https://github.com/JahaanRawat/apdl"

[tool.setuptools.packages.find]
include = ["apdl*"]

[tool.setuptools.package-data]
apdl = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
