[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apdl-sdk"
dynamic = ["version"]
description = "Server-side Python client SDK for the Autonomous Product Development Loop platform"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "APDL" }]
keywords = ["analytics", "feature-flags", "experimentation", "ab-testing", "apdl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/kuvera-apdl/apdl/tree/main/sdk/python#readme"
Repository = "https://github.com/kuvera-apdl/apdl"
Issues = "https://github.com/kuvera-apdl/apdl/issues"

[tool.setuptools.packages.find]
include = ["apdl*"]

[tool.setuptools.package-data]
apdl = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "apdl._version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["apdl"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
