[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Pin discovery to the app package; the top-level templates/ and scripts/
# dirs are tooling, not importable packages, and would otherwise break
# setuptools flat-layout auto-discovery.
include = ["app*"]

[project]
name = "apdl-agents"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "google-genai>=1.0.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "fastembed>=0.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "jinja2>=3.1",
]
