[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Pin discovery to the app package so setuptools flat-layout auto-discovery
# does not try to package tests/ or other top-level dirs.
include = ["app*"]

[project]
name = "apdl-codegen"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pyjwt[crypto]>=2.9.0",
]

[project.scripts]
apdl-codegen-eval = "app.evaluations.cli:main"
apdl-codegen-grant-repository = "app.github.grant_cli:main"
apdl-codegen-revoke-repository = "app.github.grant_cli:revoke_main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]
# The OSS coding engine. Optional: the service shells out to the `aider` CLI, so
# it is only needed where the real editor runs (the codegen host or the sandbox
# image), not for the FakeEditor-backed tests. Pulls in LiteLLM for any model.
agent = [
    "aider-chat==0.86.2",
]
